resources/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: okd-build-history
    app.kubernetes.io/component: okd-build-history
    app.kubernetes.io/instance: okd-build-history
  name: okd-build-history
spec:
  port:
    targetPort: 8000
  tls:
    termination: edge
  to:
    kind: Service
    name: okd-build-history
    weight: 100
  wildcardPolicy: None
